# coro_eyes_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
config/dlp_platforms/: projector_settings.txt
launch/: adjust_focus.launch  camera_calibration.launch  coro_eyes.launch  load_urdf.launch  pose_estimation.launch  scan.launch  upload_patterns.launch
nodes/: adjust_focus.cpp  camera_calibration.cpp  pose_estimation.cpp  scan.cpp  upload_patterns.cpp
nodes/point_cloud/: point_cloud.h
scripts/: coro_eyes.py  pc_visualizer.py
scripts/point_cloud/: point_cloud.cpp  point_cloud_example.cpp
src/pc_utility/: convert.py
srv/: Scan.srv
urdf/: coro_eyes.urdf.xacro  coro_eyes_example.urdf.xacro
